# QualityOpen

./: .env  .env.example  .gitignore  AI_CONTEXT_ARCHITECTURE.md  AI_CONTEXT_IMPLEMENTATION_GUIDE.md  AI_CONTEXT_MINDMAP_CODEBASE.md  CHANGELOG.md  COMPREHENSIVE_FEATURES.md  CONTRIBUTING.md  FEATURES_GUIDE.md  FUTUREMINDMAP.md  GOLD_STANDARDS.md  LICENSE  MINDMAP_ANALYSIS.md  README.md  SECURITY.md  START.md  handover.md  index.html  package.json  pnpm-lock.yaml  sos.md  tsconfig.json  updater.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: README.de.md  README.es.md  README.fr.md  README.it.md  README.nl.md  README.pt.md  README.tr.md
ignore/: client_secret_1098912308417-fimciq4cr88su311fslnietq9bebtt4r.apps.googleusercontent.com.json  client_secret_2_1098912308417-5cko1frk7vv2t5lmj806cc9btdtn2son.apps.googleusercontent.com.json  client_secret_622174046881-9fanm6k8351fvfri8jgt2gb3srd0brda.apps.googleusercontent.com.json  package-lock.json  package.json  qualityopen-c1f97-firebase-adminsdk-fbsvc-f25ca63459.json  set-premium.js
public/: diagnostic.js
scripts/: update-updater.js
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AutoUpdater.tsx  ConceptMapBoard.tsx
src/data/: features.ts
src/dev-tools/: mockData.ts  studioDirector.ts
src/hooks/: useLicense.ts  useT.ts  (+2 more)
(+122 files in other folders)
